@@ -1,7 +1,7 @@
 #  File src/library/utils/R/edit.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -19,7 +19,7 @@
 check_for_XQuartz <- function()
 {
     DSO <- file.path(R.home("modules"), "R_de.so")
-    out <- system2("otool", c("-L", shQuote(DSO)), stdout = TRUE)
+    out <- system2("/usr/bin/otool", c("-L", shQuote(DSO)), stdout = TRUE)
     ind <- grep("libX11[.][0-9]+[.]dylib", out)
     if(length(ind)) {
         this <- sub(" .*", "", sub("^\t", "", out[ind]))
