@@ -1,7 +1,7 @@
 #  File src/library/utils/R/sessionInfo.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,7 +16,7 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
-sessionInfo <- function(package=NULL)
+sessionInfo <- function(package = NULL)
 {
     z <- list()
     z$R.version <- R.Version()
@@ -25,6 +25,44 @@ sessionInfo <- function(package=NULL)
         z$platform <- paste(z$platform, .Platform$r_arch, sep = "/")
     z$platform <- paste0(z$platform, " (", 8*.Machine$sizeof.pointer, "-bit)")
     z$locale <- Sys.getlocale()
+    ## Now try to figure out the OS we are running under
+    if (.Platform$OS.type == "windows") {
+        z$running <- win.version()
+    } else if (nzchar(Sys.which('uname'))) {
+        uname <- system("uname -a", intern = TRUE)
+        os <- sub(" .*", "", uname)
+        z$running <-
+            switch(os,
+                   "Linux" = if(file.exists("/etc/os-release")) {
+                       tmp <- readLines("/etc/os-release")
+                       t2 <- if (any(grepl("^PRETTY_NAME=", tmp)))
+                           sub("^PRETTY_NAME=", "",
+                               grep("^PRETTY_NAME=", tmp, value = TRUE)[1L])
+                       else if (any(grepl("^NAME", tmp)))
+                           sub("^NAME=", "",
+                               grep("^NAME=", tmp, value = TRUE)[1L])
+                       else "Linux (unknown distro)"
+                       sub('"(.*)"', "\\1", t2)
+                   },
+                   "Darwin" = {
+                       ver <- system('uname -r', intern = TRUE)
+                       ver1 <- strsplit(ver, ".", fixed = TRUE)[[1L]][1L]
+                       sprintf("apple-darwin%s (%s)", ver,
+                               switch(ver1,
+                                      "10" = "Snow Leopard",
+                                      "11" = "Lion",
+                                      "12" = "Mountain Lion",
+                                      "13" = "Mavericks",
+                                      "14" = "Yosemite",
+                                      "unknown"))
+                   },
+                   "Solaris" = {
+                       ver <- system('uname -r', intern = TRUE)
+                       paste("Solaris",
+                             strsplit(ver, ".", fixed = TRUE)[[1L]][2L])
+                   },
+                   uname)
+    }
 
     if(is.null(package)){
         package <- grep("^package:", search(), value=TRUE)
@@ -64,7 +102,9 @@ print.sessionInfo <- function(x, locale=TRUE, ...)
     }
 
     cat(x$R.version$version.string, "\n", sep = "")
-    cat("Platform: ", x$platform, "\n\n", sep = "")
+    cat("Platform: ", x$platform, "\n", sep = "")
+    if (!is.null(x$running)) cat("Running under: ",  x$running, "\n", sep = "")
+    cat("\n")
     if(locale){
         cat("locale:\n")
 	print(strsplit(x$locale, ";", fixed=TRUE)[[1]], quote=FALSE, ...)
